--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="index.js"></script>
 </head>
 <body>
-    
+    <div id="overlay"></div>
+    <div style="height: 8px;"></div>
+    <div id="title">
+    <span id="logo">Memory Matching Game</span>
+    </div>
+
+    <div id="title" style="height: 40px;">
+        <span id="moves"></span>
+        <span id="time"></span>
+    </div>
+
+    <center>
+        <table cellspacing="0"></table>
+    </center>
 </body>
 </html>
