--- a/index.html
+++ b/index.html
@@ -3,24 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="index.js"></script>
+    <title>Login/Signup - Memory Matching Game</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div id="overlay"></div>
-    <div style="height: 8px;"></div>
-    <div id="title">
-    <span id="logo">Memory Matching Game</span>
+    <div class="container">
+        <div id="formContainer" class="form-container">
+            <form id="loginForm">
+                <h2>Login</h2>
+                <input type="text" placeholder="Username" required>
+                <input type="password" placeholder="Password" required>
+                <button type="submit">Login</button>
+                <div class="switch-form">
+                    <span>Don't have an account?</span>
+                    <button type="button" class="switch-btn" onclick="switchForm('signup')">Sign Up</button>
+                </div>
+            </form>
+            <form id="signupForm" class="hidden">
+                <h2>Sign Up</h2>
+                <input type="text" placeholder="Username" required>
+                <input type="password" placeholder="Password" required>
+                <div class="password-info">Password must be 8-20 characters long</div>
+                <input type="password" placeholder="Confirm Password" required>
+                <button type="submit">Sign Up</button>
+                <div class="switch-form">
+                    <span>Already have an account?</span>
+                    <button type="button" class="switch-btn" onclick="switchForm('login')">Login</button>
+                </div>
+            </form>
+        </div>
     </div>
-
-    <div id="title" style="height: 40px;">
-        <span id="moves"></span>
-        <span id="time"></span>
-    </div>
-
-    <center>
-        <table cellspacing="0"></table>
-    </center>
+    <script src="login.js"></script>
 </body>
 </html>
