--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Matching Game</title>
     <link rel="icon" href="assets/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="game.css">
 </head>
 <body>
     <div id="overlay"></div>
